--- a/notes.org
+++ b/notes.org
@@ -46,9 +46,22 @@
 ** installs to home page under android
 * To do list
 [ ] make svg canvas a useful size
+	the css/props to size it were stolen from elsewhere
 [ ] solve the source of laggy touches
+	seems to be the tests for playability, which get laggy
+	when they have to go into deep thought, delays response
+	to subsequent touches
 [ ] enable menu items
+	enable them on/off according to state of game
 [ ] make an end of game dialog
+	that presents undo/restart/new as options	
 [ ] make the name correct
+	in the desktop manifest etc
 [ ] make the icons correct
+	in the desktop manifest etc
 [ ] saved to desktop game app cannot start new game without menu
+	should be better now
+[ ] eliminate the play/tiles/layout/scores/prefs menu, just the play
+[ ] bug in the history made for redo'ing to see generated solution
+	throws an undefined object exception
+
