--- a/notes.org
+++ b/notes.org
@@ -45,9 +45,9 @@
 ** deploys to android, chromebook, and linux running chrome
 ** installs to home page under android
 * To do list
-[ ] make svg canvas a useful size
+[x] make svg canvas a useful size
 	the css/props to size it were stolen from elsewhere
-[ ] solve the source of laggy touches
+[ x solve the source of laggy touches
 	seems to be the tests for playability, which get laggy
 	when they have to go into deep thought, delays response
 	to subsequent touches,
@@ -83,7 +83,7 @@
 [x] eliminate offset of icon
 [ ] add keyboard accelerators to menu
 [ ] add "About" item to menu with brief dialog
-[ ] figure out why the end of game buttons are flaky
+[x] figure out why the end of game buttons are flaky
 	tried posting actions with this.async() still flaky
 	flaky meaning run/don't run for unknown reasons
 	moved button and menu events to polymer's tap event
@@ -97,8 +97,15 @@
 	cannot resolve the url and it doesn't know that the program
 	will resolve it internally, surprised that there isn't a fix
 	for this already in polymer/firebase.
-[ ] make the svg icons render each in its own <svg> element which can
+[x] make the svg icons render each in its own <svg> element which can
 	be the target of on-tap.  Problem is whether this needs to
 	include the entire set of defs in each tile.  There are ways
 	to reference an external svg, but I think it requires the <use>
 	elements inside the svg to ref itself as an external svg.
+[ ] reduce the umbra of the tile buttons?  maybe not, let it be for now
+[x] move the app background-color to the <body> because we lost all the
+	height:100% settings for some reason when I built and pushed to
+	firebase
+[ ] look for clues about making the button animation work correctly on the
+	dialogs
+[ ] add icon buttons for undo/redo to the main screen
