--- a/notes.org
+++ b/notes.org
@@ -99,11 +99,13 @@
 	the loop that truncated old history was busted,
 	stopped altering the size of the history.items,
 	just kept the correct pointers
-[ ] make the url show the seed of the random number generator
+[x] make the url show the seed of the random number generator
 	this fails when you try to reload a sub-url, the server
 	cannot resolve the url and it doesn't know that the program
 	will resolve it internally, surprised that there isn't a fix
 	for this already in polymer/firebase.
+	had to use the window.location.hash, not using app-location or
+	app-route at all
 [x] make the svg icons render each in its own <svg> element which can
 	be the target of on-tap.  Problem is whether this needs to
 	include the entire set of defs in each tile.  There are ways
