--- a/notes.org
+++ b/notes.org
@@ -125,7 +125,8 @@
 [x] look for clues about making the button animation work correctly on the
 	dialogs
 	need to fire action after "transitionend" event from the button
-[ ] add icon buttons for undo/redo to the main screen
+[x] add icon buttons for undo/redo/new/restart to the main screen in place
+	of menu hamburger
 [ ] on android, not centered, not redrawn correctly on rotate
 	the actual problem has to do with rotate, occurs on Flip, too, so
 	the resize event is only part of the story when rotating
@@ -136,5 +137,5 @@
 	many impotent button press animations, eliminated all on-tap animation
 	on tiles by seting noink="true", but I still get some ink on Android,
 	but not when I go for a more canary version of Chrome
-
+[ ] rotate button menu to align with free space on screen
 
